Updated formin Sender.html

--- a/sender.html
+++ b/sender.html
@@ -13,6 +13,26 @@
         <input id="name" type="text" name="name" placeholder="Enter Fullname">
         <button id="SubmitBtn" type="submit" style="background-color: green; color:whitesmoke; border-radius:8px; padding: 4px; border: 2px solid green;"> Register</button>
     </form>
+    <form id="request-form" action="">
+
+        <div class="input-group mb-3">
+            <span class="input-group-text" id="inputGroup-sizing-default">Location</span>
+            <input required type="text" value="lagos" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+          </div>
+
+          <div class="input-group mb-3">
+            <span class="input-group-text" id="inputGroup-sizing-default">Destination</span>
+            <input required type="text" value="ibadan" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+          </div>
+
+          <div class="input-group mb-3">
+            <span class="input-group-text" id="inputGroup-sizing-default">Price</span>
+            <input required type="number" value="100" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+          </div>
+
+        <input type="submit" class="btn btn-primary" value="Request">
+
+    </form>
     <label style="margin-top: 20px;"><b>Notifications:</b></label>
     <div style="border: 1px solid lightgray; min-height: 60vh;" id="notification-container">
 
